welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:26: error: not found: value escritMessage
escritMessage(pas)
^